<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">明日之星點餐系統</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="btPtprofile">登入</string>
    <string name="btPtorder">點餐</string>
    <string name="btPtgoback">返回</string>
    <string name="btPtlogin">登入</string>
    <string name="PttextID">帳號 : </string>
    <string name="PttextPW">密碼 : </string>
    <string name="PttextOID">代號 : </string>
    <string name="PttextRID">店家代號 : </string>
    <string name="PttextOItem">菜名 : </string>
    <string name="PttextOPrice">價錢 : </string>
    <string name="btPtinsert">新增</string>
    <string name="btPtedit">修改</string>
    <string name="btPtdelet">刪除</string>
	<string name="btPtlogout">登出</string>
	<string name="btPtre">重新輸入</string>
	<string name="btPtpre">上一個</string>
	<string name="btPtnext">下一個</string>
	<string name="btPt2Order">訂單查詢</string>
	<string name="btPt2Profit">營業額</string>
	<string name="btPt2Edit">菜單設定</string>
	<string name="btPtsend">送出</string>
	<string name="PttextAmount">數量 : </string>
	<string name="Ptday">日營業額 : </string>
	<string name="Ptmonth">月營業額 : </string>
</resources>