<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/bt2Order"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="303dp"
        android:text="@string/btPt2Order" />

    <Button
        android:id="@+id/bt2Profit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/bt2Order"
        android:layout_below="@+id/bt2Order"
        android:layout_marginTop="55dp"
        android:text="@string/btPt2Profit" />

    <Button
        android:id="@+id/bt2Edit"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt2Profit"
        android:layout_below="@+id/bt2Profit"
        android:layout_marginTop="55dp"
        android:text="@string/btPt2Edit" />

    <Button
        android:id="@+id/btgoback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bt2Edit"
        android:layout_alignRight="@+id/bt2Edit"
        android:layout_below="@+id/bt2Edit"
        android:layout_marginTop="55dp"
        android:text="@string/btPtgoback" />

</RelativeLayout>