<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewItem1"
        android:layout_below="@+id/textViewItem1"
        android:layout_marginTop="36dp"
        android:text="@string/PttextAmount" 
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textViewItem2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewItem1"
        android:layout_alignBottom="@+id/textViewItem1"
        android:layout_toRightOf="@+id/textViewItem1"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/etAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewAmount"
        android:layout_alignBottom="@+id/textViewAmount"
        android:layout_toRightOf="@+id/textViewAmount"
        android:ems="10" 
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btsend"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAmount"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="103dp"
        android:text="@string/btPtsend"/>

    <Button
        android:id="@+id/btgoback"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btsend"
        android:layout_below="@+id/btsend"
        android:layout_marginTop="50dp"
        android:text="@string/btPtgoback" />

    <TextView
        android:id="@+id/textViewItem1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/spinner1"
        android:layout_marginLeft="203dp"
        android:layout_marginTop="336dp"
        android:text="@string/PttextOItem" 
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
</RelativeLayout>